--- a/styles.css
+++ b/styles.css
@@ -46,9 +46,11 @@ h1, h2 {
 }
 
 img {
-    width: 100%; /* Ensures the image takes up the full width of its container */
-    height: auto; /* Maintains the image's aspect ratio */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 .image-class {
     object-fit: cover; /* Crops the image while maintaining its aspect ratio */
